--- a/Leyout_3/css/styles.css
+++ b/Leyout_3/css/styles.css
@@ -1,46 +1,58 @@
 * {
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: 'Jost', sans-serif;
   font-style: normal;
   font-weight: 400;
+  color: #fff;
 }
+
 ul {
   list-style-type: none;
   padding-left: 0;
 }
+
 a {
   text-decoration: none;
 }
+
 .header {
   /* background-color: blueviolet; */
 }
+
 .header .container {
   height: 155px;
 }
+
 .container {
   /* background-color: pink; */
   max-width: 1111px;
   margin-left: auto;
   margin-right: auto;
 }
+
 .flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .logo {
   line-height: 0;
 }
+
 .logo-header {
   width: 197px;
   height: 24px;
 }
+
 .menu {
   gap: 42px;
 }
+
 .menu a {
   text-transform: uppercase;
   font-size: 14px;
@@ -49,17 +61,83 @@ a {
   color: #333136;
   transition: text-decoration-line 0.5s ease-in-out;
 }
+
 .menu a:hover {
   text-decoration-line: underline;
 }
+
 .main {
   /* background-color: aqua; */
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+  background: url(../assets/images/body_bg_top.png),
+    url(../assets/images/body_bg_bottom.png);
+  background-repeat: no-repeat;
+  background-position: left top 320px, right bottom 74px;
 }
+
 .container-bg {
 }
+
+.hero {
+  min-height: 640px;
+  border-radius: 15px;
+  padding-left: 95px;
+  padding-right: 95px;
+  background: url(../assets/images/hero_smart.png),
+    url(../assets/images/hero_bg_circle.png), #e7816b;
+  background-repeat: no-repeat;
+  background-position: right bottom, right center;
+}
+
+.hero__content {
+  max-width: 540px;
+}
+
+.hero__content h1 {
+  min-height: 165px;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 100%;
+  margin-bottom: 11px;
+}
+
+.hero__content p {
+  font-size: 16px;
+  line-height: 162%;
+  margin-bottom: 40px;
+}
+
+.hero__content a {
+  font-family: 'Jost', sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 0.07em;
+  text-transform: uppercase;
+  color: #333136;
+  border-radius: 8px;
+  width: 152px;
+  height: 56px;
+  padding-left: 24px;
+  padding-right: 24px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.hero__content a:hover {
+  background: #ffad9b;
+  color: #fff;
+}
+
+.products {
+  /* padding-top: 160px; */
+  min-height: 960px;
+}
+
 .footer {
   background-color: #1d1c1e;
 }
