--- a/Leyout_3/css/styles.css
+++ b/Leyout_3/css/styles.css
@@ -138,6 +138,94 @@ a {
   min-height: 960px;
 }
 
+.products__content {
+  width: 100%;
+  display: flex;
+  gap: 30px;
+}
+
+.products__content article div {
+  border-radius: inherit;
+  width: 100%;
+  height: 100%;
+  transition: background 0.5s ease-in-out;
+}
+
+.products__content article:hover div {
+  background: rgba(231, 130, 107, 0.849);
+}
+
+.product__content-item {
+  width: 100%;
+}
+
+.product {
+  max-width: 541px;
+  height: 308px;
+  border-radius: 15px;
+  background: #000;
+}
+
+.product__content-item.product {
+  min-height: 640px;
+  background-image: url(../assets/images/web.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+div.product__content-item {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+div.product__content-item article.product {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+div.product__content-item article.product:nth-child(1) {
+  background-image: url(../assets/images/app.jpg);
+}
+
+div.product__content-item article.product:nth-child(2) {
+  background-image: url(../assets/images/graphic.jpg);
+}
+
+.product div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+
+.product h2 {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.product a {
+  font-weight: 500;
+  letter-spacing: 5px;
+  line-height: normal;
+  text-transform: uppercase;
+  color: #fff;
+  padding-right: 21px;
+  background-image: url(../assets/images/arrow-right.svg);
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.product a h3 {
+  font-size: 15px;
+}
+
 .footer {
   background-color: #1d1c1e;
 }
