--- a/Leyout_3/css/styles.css
+++ b/Leyout_3/css/styles.css
@@ -226,6 +226,47 @@ div.product__content-item article.product:nth-child(2) {
   font-size: 15px;
 }
 
+.props {
+  column-gap: 30px;
+}
+
+.props__item {
+  text-align: center;
+  width: 350px;
+  min-height: 792px;
+}
+
+.props__item h2 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 130%;
+  letter-spacing: 0.25em;
+  color: #333136;
+  margin-top: 48px;
+}
+
+.props__item p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  color: #333136;
+  margin-top: 32px;
+}
+
 .footer {
   background-color: #1d1c1e;
+  min-height: 393px;
+  position: relative;
+}
+
+.touch {
+  height: 292px;
+  max-width: 1111px;
+  width: 100%;
+  border-radius: 15px;
+  background: url(../assets/images/touch-bg.png), #e7816b;
+  background-repeat: no-repeat;
+  background-position: right center;
+  position: absolute;
+  top: -220px;
 }
